[gd_scene load_steps=6 format=3 uid="uid://nah0ecyh5muh"]

[ext_resource type="FontFile" uid="uid://bewp2mh0kpltv" path="res://assets/fonts/pixelOperator/PixelOperator8.ttf" id="1_qn6gc"]
[ext_resource type="Script" uid="uid://cuh0rfdew1obj" path="res://scripts/ui/update_container.gd" id="1_ycrd2"]

[sub_resource type="LabelSettings" id="LabelSettings_qpk3n"]
font = ExtResource("1_qn6gc")
font_size = 32
outline_size = 8
outline_color = Color(0.486275, 0.486275, 0.486275, 1)

[sub_resource type="GDScript" id="GDScript_jl080"]
script/source = "extends Label

@onready var udate_3: UpdateContainer = $\"..\"

func _ready() -> void: text = udate_3.date
"

[sub_resource type="LabelSettings" id="LabelSettings_c3yx8"]
font = ExtResource("1_qn6gc")
font_size = 28
outline_size = 4
outline_color = Color(0.486275, 0.486275, 0.486275, 1)

[node name="Update" type="VBoxContainer"]
custom_minimum_size = Vector2(1400, 0)
script = ExtResource("1_ycrd2")

[node name="dateLabel" type="Label" parent="."]
layout_mode = 2
text = "August 27, 2025"
label_settings = SubResource("LabelSettings_qpk3n")
script = SubResource("GDScript_jl080")

[node name="space3" type="BoxContainer" parent="."]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="."]
modulate = Color(1, 1, 1, 0.588235)
custom_minimum_size = Vector2(1000, 3)
layout_mode = 2
color = Color(0.5, 0.5, 0.5, 1)

[node name="space" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 35

[node name="Update 1" type="HBoxContainer" parent="space"]
layout_mode = 2
theme_override_constants/separation = 25

[node name="Update 1" type="VBoxContainer" parent="space/Update 1"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
theme_override_constants/separation = 25

[node name="Update 1" type="VBoxContainer" parent="space/Update 1/Update 1"]
custom_minimum_size = Vector2(1200, 0)
layout_mode = 2
theme_override_constants/separation = 50

[node name="headerLabel" type="Label" parent="space/Update 1/Update 1/Update 1"]
layout_mode = 2
text = "Update 0.0.12:"
label_settings = SubResource("LabelSettings_c3yx8")

[node name="content" type="MarginContainer" parent="space/Update 1/Update 1/Update 1"]
layout_mode = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 0

[node name="contentLabel" type="RichTextLabel" parent="space/Update 1/Update 1/Update 1/content"]
layout_mode = 2
mouse_filter = 2
theme_override_colors/default_color = Color(0.75, 0.75, 0.75, 1)
theme_override_colors/font_outline_color = Color(0.15, 0.15, 0.15, 1)
theme_override_constants/outline_size = 4
theme_override_constants/line_separation = 12
theme_override_fonts/normal_font = ExtResource("1_qn6gc")
theme_override_font_sizes/normal_font_size = 28
text = "Dash skill added!

The game subtitle is switched from BETA to ALPHA as well as expanded a major part of the code's architecture ."
fit_content = true
